LIVIJUKU-220 Tallennustoiminto esikatselu-painikkeen ja lähetä-painikkeen yhteyteen
Kesken, pitää testata kun validoinnit saadaan kuntoon.

--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -597,11 +597,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
           <a href="#/h/hakemukset"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
             päänäkymään</a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
           <div
             ng-show="(hakemus.hakemustilatunnus == 'K' || hakemus.hakemustilatunnus == 'T0') && sallittu('modify-oma-hakemus')">
             <button data-ng-click="tallennaHakemus()" class="pull-right btn btn-primary">Tallenna tiedot
@@ -614,8 +614,8 @@
             </button>
           </div>
         </div>
-        <div class="col-md-2">
-          <button data-ng-click="naytaHakemus()" class="pull-right btn btn-primary" noenter>Hakemuksen esikatselu
+        <div class="col-md-3">
+          <button data-ng-click="naytaHakemus(hakemus.hakemustilatunnus)" class="pull-right btn btn-primary" noenter>Tallenna ja esikatsele hakemus
           </button>
         </div>
       </div>
@@ -647,22 +647,22 @@
         <div class="col-md-12">
           <div ng-show="sallittu('allekirjoita-oma-hakemus')">
             <button ng-show="hakemus.hakemustilatunnus == 'K'" data-ng-click="lahetaHakemus()"
-                    class="pull-right btn btn-success">Lähetä hakemus
+                    class="pull-right btn btn-success">Tallenna ja lähetä hakemus
             </button>
             <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
-                    class="pull-right btn btn-success">Lähetä täydennetty hakemus
+                    class="pull-right btn btn-success">Tallenna ja lähetä täydennetty hakemus
             </button>
             <button ng-show="hakemus.hakemustilatunnus != 'K' && hakemus.hakemustilatunnus != 'T0'"
                     data-ng-click="lahetaHakemus()"
-                    class="pull-right btn btn-success" disabled>Lähetä hakemus
+                    class="pull-right btn btn-success" disabled>Tallenna ja lähetä hakemus
             </button>
           </div>
           <div ng-hide="sallittu('allekirjoita-oma-hakemus')">
             <button ng-show="hakemus.hakemustilatunnus != 'T0'" data-ng-click="lahetaHakemus()"
-                    class="pull-right btn btn-success" disabled>Lähetä hakemus
+                    class="pull-right btn btn-success" disabled>Tallenna ja lähetä hakemus
             </button>
             <button ng-show="hakemus.hakemustilatunnus == 'T0'" data-ng-click="lahetaTaydennys()"
-                    class="pull-right btn btn-success">Lähetä täydennetty hakemus
+                    class="pull-right btn btn-success">Tallenna ja lähetä täydennetty hakemus
             </button>
           </div>
         </div>
