--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -55,53 +55,10 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h3>HAKIJAN TIEDOT ({{hakija}})</h3>
+      <h3>{{hakija}}</h3>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="hakija">
-        <div class="hakijaotsake">Hakija</div>
 
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="hakija">
-        <div class="hakijaotsake">Hakija</div>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="hakija">
-        <div class="hakijaotsake">Allekirjoittaja</div>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-
-        <p>Puuttuu</p>
-      </div>
-    </div>
-    <div class="col-md-6"></div>
-  </div>
   <div>
     <div class="row">
       <div class="col-md-12">
@@ -125,320 +82,14 @@
         </div>
       </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-md-9">
-            <h4 class="panel-title">PSA:n mukaisen liikenteen hankinta</h4>
-          </div>
-          <div class="col-md-3">
-            <div class="pull-right">
-              <h4 class="panel-title">{{(psa1haettavaavustus + psa2haettavaavustus + psamhaettavaavustus) | currency:"&euro;"}}</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Paikallisliikenne</h5>
-          </div>
-          <div ng-show="(psa1haettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
 
-              <p>{{psa1haettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
+    <form name="hakemusForm">
 
-              <p>{{psa1omarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(psa1haettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Integroitu palvelulinja, kaikille avointa</h5>
-          </div>
-          <div ng-show="(psa2haettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
+      <jku-avustuskohdeluokka luokka="jkuAvustuskohdeluokkaPSA"></jku-avustuskohdeluokka>
+      <jku-avustuskohdeluokka luokka="jkuAvustuskohdeluokkaHK"></jku-avustuskohdeluokka>
+      <jku-avustuskohdeluokka luokka="jkuAvustuskohdeluokkaK"></jku-avustuskohdeluokka>
 
-              <p>{{psa2haettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{psa2omarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(psa2haettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Muu PSA:n mukaisen liikenteen järjestäminen</h5>
-          </div>
-          <div ng-show="(psamhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{psamhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{psamomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(psamhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-md-9">
-            <h4 class="panel-title">Hintavelvoitteiden korvaaminen</h4>
-          </div>
-          <div class="col-md-3">
-            <div class="pull-right">
-              <h4 class="panel-title">{{(hkslhaettavaavustus + hkklhaettavaavustus + hkllhaettavaavustus +
-                hktlhaettavaavustus) | currency:"&euro;"}}</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Seutulippu</h5>
-          </div>
-          <div ng-show="(hkslhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{hkslhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{hkslomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(hkslhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Kaupunkilippu / kuntalippu</h5>
-          </div>
-          <div ng-show="(hkklhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{hkklhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{hkklomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(hkklhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Liityntälippu (esim. VR, pääkaupunkiseudun)</h5>
-          </div>
-          <div ng-show="(hkllhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{hkllhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{hkllomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(hkllhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Työmatkalippu</h5>
-          </div>
-          <div ng-show="(hktlhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{hktlhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{hktlomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(hktlhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="row">
-          <div class="col-md-9">
-            <h4 class="panel-title">Liikenteen suunnittelu- ja kehittämishankkeet</h4>
-          </div>
-          <div class="col-md-3">
-            <div class="pull-right">
-              <h4 class="panel-title">{{(kimhaettavaavustus + kmpkhaettavaavustus + kmkhaettavaavustus +
-                krthaettavaavustus + kmhaettavaavustus) | currency:"&euro;"}}</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Informaatio- ja maksujärjestelmien kehittäminen</h5>
-          </div>
-          <div ng-show="(kimhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{kimhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{kimomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(kimhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Matkapalvelukeskuksen suunnittelu ja kehittäminen</h5>
-          </div>
-          <div ng-show="(kmpkhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{kmpkhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{kmpkomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(kmpkhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Matkakeskuksen suunnittelu ja kehittäminen</h5>
-          </div>
-          <div ng-show="(kmkhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{kmkhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{kmkomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(kmkhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Raitiotien suunnittelu</h5>
-          </div>
-          <div ng-show="(krthaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{krthaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{krtomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(krthaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <h5>Muu hanke, mikä?</h5>
-          </div>
-          <div ng-show="(kmhaettavaavustus>0)">
-            <div class="col-md-6">
-              <h5>Haettava valtionavustus</h5>
-
-              <p>{{kmhaettavaavustus |currency:"&euro;"}}</p>
-            </div>
-            <div class="col-md-6">
-              <h5>Kunnan oma rahoitusosuus</h5>
-
-              <p>{{kmomarahoitus |currency:"&euro;"}}</p>
-            </div>
-          </div>
-          <div ng-show="(kmhaettavaavustus==0)">
-            <div class="col-md-12">
-              <p>Ei haettu avustusta.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </form>
     <div class="row">
       <div class="col-md-9">
         <div ng-show="(tyyppi == 'AH0')">
